fix the focus issues in the "edit booking" dialog